templates/yaml/nextcloud/collabora/col-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collabora
  namespace: collabora
  labels:
    app: collabora
spec:
  ports:
    - port: 9980
  selector:
    app: collabora
