templates/yaml/nextcloud/collabora/col-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-collabora
  namespace: collabora
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - collabora.next.cuak.es
    secretName: collabora-tls
  rules:
  - host: collabora.next.cuak.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
             name: collabora
             port:
                number: 80
